added the basic html of submit button and remainedr text

--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
                         <input type="password">
                         <label for="">Confirm Password</label>
                     </div>
+                    <div class="form-submit">
+                        <input type="submit">
+                    </div>
+                    <div class="reminder-message">
+                        Already have an account? <span class="log-in-button">Log in</span>
+                    </div>
                 </form>
             </div>
     
