--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
         <div class="picture-section">
             <div class="logo-layer">
-                <div class="logo">123</div>
+                <div class="logo"><img src="/logo.png" alt="meow logo" /></div>
             </div>
-            <div class="picture-footer">123</div>
+            <div class="picture-footer">Design by SKYKEY</div>
         </div>
     
         <div class="right-section">
