edited the form footer and adjusted the layout bg color

--- a/index.html
+++ b/index.html
@@ -63,12 +63,14 @@
                         <input type="password">
                         <label for="">Confirm Password</label>
                     </div>
-                    <div class="form-submit">
-                        <input type="submit">
+                <div class="form-submit">
+                    <div class="create-acc">
+                        <input type="submit" name="submit" id="submit" class="create-btn" value="Create account">
                     </div>
                     <div class="reminder-message">
-                        Already have an account? <span class="log-in-button">Log in</span>
+                        Already have an account? <span><a href="#">Log in</a></span>
                     </div>
+                </div>
                 </form>
             </div>
     
