--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <input type="submit" name="submit" id="submit" class="create-btn" value="Create account">
                     </div>
                     <div class="reminder-message">
-                        Already have an account? <span><a href="#">Log in</a></span>
+                        Already have an account? <span><a href="#" class="log-in-btn">Log in</a></span>
                     </div>
                 </div>
                 </form>
