--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div class="picture-section">
             <div class="logo-layer">
-                <div class="logo"><img src="/logo.png" alt="meow logo" /></div>
+                <div class="logo"><img src="images/logo.png" alt="meow logo" /></div>
             </div>
             <div class="picture-footer">Design by SKYKEY</div>
         </div>
